# cdrm

./: .gitignore  LICENSE.md  README.md
cdrm/: CMakeLists.txt  package.xml
cdrm/include/cdrm/: cdrm.h  cdrm_serialisation.h  generator.h  roadmap.h  utils.h  voxelise.h
cdrm/scripts/: generate_cdrm_client  load_cdrm  save_cdrm
cdrm/src/: cdrm.cpp  generator.cpp  server.cpp  utils.cpp  voxelise.cpp
cdrm_legged/: CMakeLists.txt  package.xml  plugin.xml
cdrm_legged/include/cdrm_legged/: conversions.h  disjoint_sets.h  leg_config_generator.h  leg_configs.h  leg_model.h  leg_planner.h  motion_validator.h  moveit_forward.h  ompl_forward.h  planner.h  planning_context.h  robust_equilibrium_stability_checker.h  stability_checker.h  state_validity_checker.h  transform_map.h
cdrm_legged/src/: contact_generator_node.cpp  conversions.cpp  disjoint_sets.cpp  leg_config_generator.cpp  leg_model.cpp  leg_planner.cpp  motion_validator.cpp  planner.cpp  planner_manager.cpp  planning_context.cpp  robust_equilibrium_stability_checker.cpp  stability_checker.cpp  state_validity_checker.cpp
cdrm_msgs/: CMakeLists.txt  package.xml
cdrm_msgs/action/: GenerateCdrm.action
cdrm_welding/: CMakeLists.txt  package.xml
cdrm_welding/include/cdrm_welding/: kinematic_utils.h  weld.h  weld_planner.h  welding_cdrm.h  welding_cdrm_generator.h
cdrm_welding/scripts/: generate_welding_cdrm_client
cdrm_welding/src/: kinematic_utils.cpp  server.cpp  weld.cpp  weld_planner.cpp  welding_cdrm.cpp  welding_cdrm_generator.cpp
cdrm_welding_msgs/: CMakeLists.txt  package.xml
cdrm_welding_msgs/action/: GenerateWeldingCdrm.action
cdrm_welding_msgs/msg/: IntervalWithOptimal.msg
cdrm_welding_msgs/srv/: PlanWeld.srv
cdrm_welding_support/: CMakeLists.txt  package.xml
cdrm_welding_support/config/: config.rviz
cdrm_welding_support/launch/: load_irb2400_on_gantry.launch  load_m10ia_on_gantry.launch  test_irb2400_on_gantry.launch  test_m10ia_on_gantry.launch
cdrm_welding_support/meshes/: l_profile.stl
cdrm_welding_support/meshes/visual/: nozzle_link.stl  torch_link.stl
cdrm_welding_support/scripts/: generate_welding_cdrm  generate_welding_cdrm_client
cdrm_welding_support/src/: plan_weld.py
cdrm_welding_support/srdf/: m10ia_on_gantry.xacro.srdf
cdrm_welding_support/urdf/: irb2400_on_gantry.xacro.urdf  m10ia_on_gantry.xacro.urdf
cdrm_welding_tutorial/: CMakeLists.txt  package.xml
cdrm_welding_tutorial/config/: config.rviz  kinematics.yaml
cdrm_welding_tutorial/launch/: load_m10ia_on_gantry.launch  plan_m10ia_on_gantry.launch  test_m10ia_on_gantry.launch
cdrm_welding_tutorial/meshes/: cylinder_cylinder.stl
cdrm_welding_tutorial/meshes/visual/: nozzle_link.stl
cdrm_welding_tutorial/scripts/: generate_welding_cdrm_client
cdrm_welding_tutorial/src/: cylinder_cylinder.txt  generate_welding_cdrm.py  l_profile.txt  plan_weld.py
cdrm_welding_tutorial/srdf/: m10ia_on_gantry.xacro.srdf
cdrm_welding_tutorial/urdf/: m10ia_on_gantry.xacro.urdf
example_quadruped_description/: CMakeLists.txt  package.xml
example_quadruped_description/launch/: rviz.launch  rviz.rviz
example_quadruped_description/meshes/: body_link.stl  coxa_link.stl  femur_link.stl  foot_link.stl  tibia_link.stl
example_quadruped_description/robots/: example_quadruped.urdf.xacro  example_quadruped_leg.urdf.xacro
example_quadruped_description/urdf/: body.urdf.xacro  common.urdf.xacro  leg.urdf.xacro
example_quadruped_leg_kinematics/: CMakeLists.txt  package.xml  plugin_description.xml
example_quadruped_leg_kinematics/include/example_quadruped_leg_kinematics/: leg_kinematics_plugin.h
example_quadruped_leg_kinematics/src/: ikfast.cpp  leg_kinematics_plugin.cpp
example_quadruped_leg_kinematics/test/: kinematics.test  kinematics_test.cpp
example_quadruped_moveit_config/: CMakeLists.txt  package.xml
example_quadruped_moveit_config/config/: cdrm_legged.yaml  controllers.yaml  example_quadruped.srdf.xacro  example_quadruped_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  legplan_planning.yaml  ompl_planning.yaml
example_quadruped_moveit_config/launch/: cdrm_legged_planning_pipeline.launch.xml  cdrm_legged_planning_pipeline.xml  cdrm_server.launch  default_warehouse_db.launch  demo.launch  example_quadruped_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  joystick_control.launch  legplan_planning_pipeline.launch.xml  move_group.launch  move_group_demo.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch  warehouse_settings.launch.xml
example_quadruped_moveit_config/meshes/: rough_terrain.stl
example_quadruped_moveit_config/src/: generate_leg_cdrm.py
legplan/: CMakeLists.txt  package.xml
legplan/include/: planning_context.h
legplan/src/: planner_manager.cpp
