<?xml version="1.0"?>
<package format="2">
  <name>cdrm_legged</name>
  <version>0.0.0</version>
  <description>The cdrm_legged package</description>
  <maintainer email="andrewjshort@gmail.com">Andrew Short</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cdrm</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_export_depend>cdrm</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <exec_depend>cdrm</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>

  <export>
    <moveit_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
