<?xml version="1.0"?>
<package>
  <name>cdrm_legged</name>
  <version>0.0.0</version>
  <description>The cdrm_legged package</description>
  <maintainer email="andrewjshort@gmail.com">Andrew Short</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cdrm</build_depend>
  <build_depend>cdrm_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>cdrm</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <moveit_core plugin="${prefix}/plugin.xml" />
  </export>
</package>
