<?xml version="1.0"?>
<package format="2">
  <name>example_quadruped_description</name>
  <version>0.0.0</version>
  <description>Description for the example_quadruped robot</description>

  <maintainer email="andrewjshort@gmail.com">Andrew Short</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
